[tool.poetry]
name = "example_fastapi_postgres"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
pydantic = "^1.9.1"
fastapi-sqlalchemy = "^0.2.1"
alembic = "^1.8.1"
psycopg = "^3.0.16"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
